--- a/thankYouPage.html
+++ b/thankYouPage.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="thankYouPage" id="thankYouPage">
-        <h2 class="thankYouPage_header" id="thankYouPage_header">
+        <h2 class="thankYouPage__header" id="thankYouPage__header">
         Dziękujemy 
         </h2>
-        <div class="thankYouPage_body"> 
+        <div class="thankYouPage__body"> 
             <h3 class="text"> 
                 Za wypełnienie formularza,
                 kod rabatowy czeka na 
